--- a/blog_project/requirements.txt
+++ b/blog_project/requirements.txt
@@ -69,7 +69,7 @@ Pygments==2.15.1
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
-pywin32==306
+pypiwin32==223
 pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==25.0.2
